--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 # Godot 4+ specific ignores
 .godot/
+.vscode/
 /android/
+
+# Godot-specific ignores
+.import/
+export.cfg
+export_presets.cfg
+
+# Imported translations (automatically generated from CSV files)
+*.translation
+
+# Addons
+addons/
